# smallpt-parallel-bvh-gpu

./: CMakeLists.txt  README.md  gpu.cu  gpu.h  index.html  params.json  rand_scene_gen  rand_scene_gen.cpp  scene  smallpt.cu
